[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptthrift-mcp"
version = "0.2.0"
description = "Smart token compression MCP server for LLM apps. Save 70-90% on API costs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Woling Dev Lab", email = "service@wolinglobal.com"}
]
keywords = ["mcp", "llm", "token-compression", "ai", "cost-optimization", "gemma"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/woling-dev/promptthrift-mcp"
Repository = "https://github.com/woling-dev/promptthrift-mcp"
Issues = "https://github.com/woling-dev/promptthrift-mcp/issues"

[project.scripts]
promptthrift-mcp = "server:main"
